--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 <div class="client_detail">
                   <div class="client_info">
                     <h6>
-                      Amit Kulkarni
+                      Ravi Yadav
                     </h6>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
